RESOLVED FIXED208296
REGRESSION(r257299): [GTK] Test imported/w3c/web-platform-tests/css/css-sizing/button-min-width.html is failing since r257299
https://bugs.webkit.org/show_bug.cgi?id=208296
Summary REGRESSION(r257299): [GTK] Test imported/w3c/web-platform-tests/css/css-sizin...
Carlos Garcia Campos
Reported 2020-02-27 04:15:55 PST
We are no longer honoring the style min width/height of buttons
Attachments
Patch (6.86 KB, patch)
2020-02-27 04:18 PST, Carlos Garcia Campos
aperez: review+
Patch for landing (7.21 KB, patch)
2020-02-28 01:42 PST, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2020-02-27 04:18:30 PST
Carlos Garcia Campos
Comment 2 2020-02-28 01:42:33 PST
Created attachment 391970 [details] Patch for landing
Carlos Garcia Campos
Comment 3 2020-02-28 01:57:40 PST
Note You need to log in before you can comment on or make changes to this bug.