REGRESSION(r257299): [GTK] Test imported/w3c/web-platform-tests/css/css-sizing/button-min-width.html is failing since r257299 https://bugs.webkit.org/show_bug.cgi?id=208296

Reviewed by Adrian Perez de Castro.

We are no longer honoring the style min width/height of buttons.

* platform/Theme.cpp:
(WebCore::Theme::minimumControlSize const): Add zoomedSize parameter.
* platform/Theme.h:
* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::minimumControlSize const): Use the style min size unless it's intrinsic or auto.
* platform/adwaita/ThemeAdwaita.h:
* platform/mac/ThemeMac.h:
* platform/mac/ThemeMac.mm:
(WebCore::ThemeMac::minimumControlSize const): Add zoomedSize parameter.
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle): Pass style min size to Theme::minimumControlSize().

Canonical link: https://commits.webkit.org/221300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257631 268f45cc-cd09-0410-ab3c-d52691b4dbfc